--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "coffeeify": "^3.0.1",
     "coffeescript": "<3.0",
-    "esprima-fb": "15001.1001.0-dev-harmony-fb",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.6.0",
@@ -46,9 +45,10 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^5.0.1",
     "node-sass": "^9.0.0",
-    "sass": "1.65.1",
+    "sass": "^1.65.1",
     "source-map": "^0.7.4",
-    "urijs": "^1.19.11"
+    "urijs": "^1.19.11",
+    "esprima-fb": "15001.1001.0-dev-harmony-fb"
   },
   "engines": {
     "node": ">=13.13.0",
@@ -56,11 +56,11 @@
   },
   "dependencies": {
     "@mapbox/node-pre-gyp": "^1.0.11",
-    "elasticlunr": "^0.9.0",
+    "elasticlunr": "^0.9.5",
     "jquery": "^3.7.0",
     "lodash": "^4.17.21",
     "rivets": "^0.9.6",
-    "sightglass": "^0.2.4",
+    "sightglass": "^0.2.6",
     "tinycolor2": "^1.6.0",
     "vtt.js": "^0.13.0"
   }
